# CleanHaskell

./: CleanHaskell.cabal  CleanReflexApp.cabal  LICENSE  README.md
src/: Main.hs
src/App/: Data.hs  Domain.hs  Entities.hs  Repositories.hs  State.hs
